--- a/index.css
+++ b/index.css
@@ -1,28 +1,14 @@
-/* Fonts */
+/* Custom Fonts */
 @font-face {
-    font-family: "newYork";
-    src: url("./assets/fonts/NewYorkExtraLarge-Medium.otf");
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "newYork";
-    src: url("./assets/fonts/NewYorkExtraLarge-MediumItalic.otf");
-    font-weight: normal;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: "newYork";
-    src: url("./assets/fonts/NewYorkExtraLarge-Black.otf");
+    font-family: "Metropolis";
+    src: url("../assets/fonts/Metropolis-Bold.otf");
     font-weight: bold;
     font-style: normal;
 }
 
 @font-face {
-    font-family: "newYork";
-    src: url("./assets/fonts/NewYorkExtraLarge-BlackItalic.otf");
+    font-family: "Metropolis";
+    src: url("../assets/fonts/Metropolis-BoldItalic.otf");
     font-weight: bold;
     font-style: italic;
 }
@@ -33,12 +19,9 @@
 body, html {
     height: 100%;
     width: 100%;
-    background-image: url(./assets/background.png);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    box-sizing: border-box;
-    
     margin: 0px;
+    
+    box-sizing: border-box;
 }
 
 body {
@@ -50,27 +33,32 @@ body {
 
 /* Text Elements */
 h1 {
-    font-family: "newYork";
-    font-size: 25px;
+    font-family: "Metropolis", sans-serif;
+    font-size: 35px;
     text-transform: uppercase;
     
-    color: white;
+    color: #343434;
     
     text-align: center;
+    
+    margin-bottom: 5px;
 }
 
 h2 {
-    font-family: "newYork";
-    font-size: 20px;
+    font-family: 'Roboto Mono', monospace;
+    font-weight: bold;
     text-transform: uppercase;
     
-    color: white;
+    color: #F35755;
+    font-size: 15px;
     
-    text-align: center;
+    margin-top: 0px;
 }
 
 p {
-    font-family: "newYork";
+    font-family: 'Roboto Mono', monospace;
+    font-weight: normal;
+    text-transform: none;
     
     color: white;
 }
@@ -83,11 +71,11 @@ a {
 /* Page Elements */
 .header {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     
-    height: 20%;
+    height: 30%;
 }
 
 .links {
@@ -96,22 +84,29 @@ a {
     align-items: center;
     justify-content: center;
     
-    height: 80%;
+    background-color: #343434;
+    box-sizing: border-box;
+    
+    height: 70%;
     padding: 40px;
+    padding-bottom: 20px;
 }
 
 .social-links {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    
+    background-color: #343434;
+    box-sizing: border-box;
     
     height: 20%;
-    padding: 40px;
+    padding: 20px 40px;
 }
 
 .button {   
-    padding: 15px 0px;
+    padding: 10px 0px;
     margin: 10px;
     max-height: 50px;
     width: 100%;
@@ -121,39 +116,77 @@ a {
     align-items: center;
     justify-content: center;
     
-    background: none;
-    color: white;
-    text-decoration: none; 
-    text-align: center;
-    vertical-align: middle;
+    background-color: rgba(255, 255, 255, 0.75);
+    color: #343434;
     border: none;
-    border-bottom: 1px solid white;
+    border-radius: 10px;
     
-    font-family: "newYork";
-    font-style: italic;
+    font-family: "Metropolis", sans-serif;
+    text-transform: uppercase;
+    text-align: left;
     font-weight: bold;
-    font-size: 15px;
+    font-size: 16px;
+}
+
+.button.icon {
+    padding: 20px;
+    margin: 5px;
+    
+    width: auto;
+    font-size: 20px;
 }
 
 .button.primary {
-    background: rgba(255, 255, 255, 0.2);
+    background-color: #F35755;
+    color: white;
+}
+
+.card {
+    padding: 20px 20px;
+    margin: 10px;
+    width: 100%;
     
-    max-height: none;
+    display: flex;
     flex-direction: column;
-}
-
-.button.primary > p {
-    margin-top: 0px;
-    font-weight: normal;
-}
-
-.button:hover {
-    background: white;
-    color: #202020;
+    align-items: center;
+    justify-content: center;
+    flex-grow: 1;
     
-    transition-duration: 0.1s;
+    background-color: rgba(255, 255, 255, 0.25);
+    color: white;
+    border: none;
+    border-radius: 10px;
+    box-sizing: border-box;
+    
+    font-family: "Metropolis", sans-serif;
+    text-transform: uppercase;
+    text-align: left;
+    font-weight: bold;
+    font-size: 16px;
 }
 
-.material-icons{
+.card > h1 {
+    font-family: "Metropolis", sans-serif;
+    font-size: 25px;
+    text-transform: uppercase;
+    color: white;
+    
+    text-align: center;
+}
+
+.card > p {
+    margin: 20px 0px;
+    font-weight: normal;
+    text-align: right;
+    font-size: 15px;
+}
+
+.card > .button {
+    box-sizing: border-box;
+    width: 100%;
+    margin-bottom: 0px;
+}
+
+.material-icons-round {
     margin: 10px;
 }
