Adrodex Release & Minor Changes

--- a/index.css
+++ b/index.css
@@ -59,6 +59,7 @@ p {
     font-family: 'Roboto Mono', monospace;
     font-weight: normal;
     text-transform: none;
+    text-align: center;
     
     color: white;
 }
